--- a/src/FluentValidationWcfEnum/packages.config
+++ b/src/FluentValidationWcfEnum/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net452" userInstalled="true" />
-  <package id="Castle.WcfIntegrationFacility" version="3.3.0" targetFramework="net452" userInstalled="true" />
-  <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" userInstalled="true" />
-  <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" userInstalled="true" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Castle.WcfIntegrationFacility" version="3.3.0" targetFramework="net452" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="net452" userInstalled="true" />
 </packages>
