Added nuspec and octopack for testing CI builds

--- a/src/FluentValidationWcfEnum/packages.config
+++ b/src/FluentValidationWcfEnum/packages.config
@@ -4,4 +4,5 @@
   <package id="Castle.WcfIntegrationFacility" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net452" userInstalled="true" />
+  <package id="OctoPack" version="3.0.60" targetFramework="net452" developmentDependency="true" />
 </packages>
